--- a/www/index.html
+++ b/www/index.html
@@ -22,13 +22,21 @@
     <script src="js/app.js"></script>
   </head>
   <body ng-app="starter">
+    <ion-side-menus>
 
-    <ion-pane>
-      <ion-header-bar class="bar-stable">
-        <h1 class="title">Ionic Blank Starter</h1>
-      </ion-header-bar>
-      <ion-content>
-      </ion-content>
-    </ion-pane>
+      <ion-side-menu-content>
+        <ion-header-bar class="bar-dark">
+          <h1 class="title">Todo</h1>
+        </ion-header-bar>
+        <ion-content>
+        </ion-content>
+      </ion-side-menu-content>
+
+      <ion-side-menu side="left">
+        <ion-header-bar class="bar-dark">
+          <h1 class="title">Projects</h1>
+        </ion-header-bar>
+      </ion-side-menu>
+    </ion-side-menus>
   </body>
 </html>
