--- a/www/index.html
+++ b/www/index.html
@@ -21,14 +21,22 @@
     <!-- your app's js -->
     <script src="js/app.js"></script>
   </head>
-  <body ng-app="starter">
+  <body ng-app="todo" ng-controller="TodoCtrl">
     <ion-side-menus>
 
       <ion-side-menu-content>
         <ion-header-bar class="bar-dark">
           <h1 class="title">Todo</h1>
+          <button class="button button-icon" ng-click="newTask()">
+            <i class="icon ion-compose"></i>
+          </button>
         </ion-header-bar>
         <ion-content>
+          <ion-list>
+            <ion-item ng-repeat="task in tasks">
+              {{task.title}}
+            </ion-item>
+          </ion-list>
         </ion-content>
       </ion-side-menu-content>
 
@@ -37,6 +45,28 @@
           <h1 class="title">Projects</h1>
         </ion-header-bar>
       </ion-side-menu>
+      <script id="new-task.html" type="text/ng-template">
+        <div class="modal">
+        <ion-header-bar class="bar-secondary">
+          <h1 class="title">New Task</h1>
+          <button class="button button-clear button-positive" ng-click="closeNewTask()">Cancel</button>
+        </ion-header-bar>
+
+        <ion-content>
+          <form ng-submit="createTask(task)">
+            <div class="list">
+              <label class="item item-input">
+                <input type="text" placeholder="What do you need to do?" ng-model="task.title">
+              </label>
+            </div>
+
+            <div class="padding">
+              <button type="submit" class="button button-block button-positive">Create Task</button>
+            </div>
+          </form>
+        </ion-content>
+        </div>
+        </script>
     </ion-side-menus>
   </body>
 </html>
